# r_voice

./: .gitignore  Cargo.toml  Makefile.toml  Readme.md  bindings.h  build.rs  idf_component.yml  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.cargo/: config.toml
src/: main.rs
